--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
+h5 {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
 #controls {
   display: flex;
