--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,25 @@ body {
 }
 
 h1 {
+  display: inline-block;
   text-align: center;
   margin-bottom: 20px;
 }
 h5 {
   text-align: center;
   margin-bottom: 20px;
+}
+
+.headingdiv {
+  justify-content: center;
+  display: inline-block;
+  display:flex;
+}
+
+.favicon {
+  display: inline-block;
+  height: 30px;
+  width: 30px;
 }
 
 #controls {
